﻿- Add individual network prop replacement
- Add proper escape key handling
- Fix text in configuration panel 'Load and apply' button
- Rework replacement class inheritance structure


Version 0.7.4 -

- Sort random prop and variation lists alphabetically
- Fix mirrored X offset for networks when props are placed outside of lane position
- Update Extended Managers Library API, allowing for temporary transitional process
- Fix individual prop highlighting for sub-buildings
- Fix random panel probability slider placement
- Fix checkbox text in configurations option panel appearing only as tooltip
- Fix revert button tooltip not changing when button state changes (LITERALLY UNPLAYABLE)


Version 0.7.3 -

- Add tree/prop preview window
- Add compatibility with Extended Managers Library (EPropManager)
- Fix scaling button tooltip translation key reference
- Panels are now automatically and instantly destroyed if an exception occurs during creation
- Revert to loaded tree/prop lists being immediately populated


Version 0.7.2 -

- Move sub-building selection to separate list panel (replacing drop-down menu)


Version 0.7.1 -

- Add experimental prop and tree scaling
- Fix random prop renaming not always being correctly applied


Version 0.7 -

- Add random prop and tree support
- Add support for map editor
- Fix slider text values not updating for some users
- Fix prop highlighting offset for sub-buildings and buildings with extensible yards
- BOB tool remains active while panel is open (for quick target changes)


Version 0.6.2 -

- Add options to remove ruining from trees and props
- Fix network prop rotation sometimes being incorrectly displayed when first selected
- Ferry paths are now selectable (to change/hide those ferry path marker buoys)


Version 0.6.1 -

- Add ascending/descending name sort filters to both target and replacement lists
- Fix overlay not properly recognising randomized trees in buildings
- Fix ".png.png" reference to replacement pack icon file