@@ -1,4 +1,5 @@
-﻿using System.Collections.Generic;
+﻿using System;
+using System.Collections.Generic;
 using UnityEngine;
 
 
@@ -507,18 +508,25 @@ namespace BOB
 			// Iterate through each element in the provided list.
 			foreach (BOBNetReplacement replacement in replacementList)
 			{
-				// Assign network info.
-				replacement.netInfo = NetInfo;
+				try
+				{
+					// Assign network info.
+					replacement.netInfo = NetInfo;
 
-				// Try to find target prefab.
-				replacement.targetInfo = replacement.isTree ? (PrefabInfo)PrefabCollection<TreeInfo>.FindLoaded(replacement.target) : (PrefabInfo)PrefabCollection<PropInfo>.FindLoaded(replacement.target);
+					// Try to find target prefab.
+					replacement.targetInfo = replacement.isTree ? (PrefabInfo)PrefabCollection<TreeInfo>.FindLoaded(replacement.target) : (PrefabInfo)PrefabCollection<PropInfo>.FindLoaded(replacement.target);
 
-				// Try to find replacement prefab.
-				replacement.replacementInfo = ConfigurationUtils.FindReplacementPrefab(replacement.Replacement, replacement.isTree);
+					// Try to find replacement prefab.
+					replacement.replacementInfo = ConfigurationUtils.FindReplacementPrefab(replacement.Replacement, replacement.isTree);
 
-				// Try to apply the replacement.
-				ApplyReplacement(replacement);
-				Logging.Message("deserialized network replacement ", replacement.netInfo?.name ?? "null", " with target ", replacement.targetInfo?.name ?? "null", " and replacement ", replacement.replacementInfo?.name ?? "null");
+					// Try to apply the replacement.
+					ApplyReplacement(replacement);
+				}
+				catch (Exception e)
+				{
+					// Don't let a single failure stop us.
+					Logging.LogException(e, "exception deserializing network replacement");
+				}
 			}
 		}
 
